DSL/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACID_BASE
    ALGEBRAIC
    AQUEOUS
    ASSIGN
    CARET
    CATALYST
    COMBUSTION
    COMMA
    COMPOUND
    DECOMPOSITION
    DOUBLE_REPLACEMENT
    ELEMENT
    EMPIRICAL_FORMULA
    ENTHALPY
    ENTROPY
    EQUALS
    EQUILIBRIUM
    FLOAT
    GAS
    GAS_FORMATION
    GIBBS_ENERGY
    HALF_REACTION
    HEAT
    LBRACE
    LBRACKET
    LIMITING_REAGENT
    LIQUID
    MOLARITY
    MOLAR_MASS
    MOLECULAR_FORMULA
    NEGATIVE
    NORMALITY
    OF
    OXIDATION_NUMBER
    OXIDATION_STATES
    PERCENT_YIELD
    PH
    POSITIVE
    PRECIPITATION
    PRESSURE
    QUERY
    RBRACE
    RBRACKET
    REACTION
    REDOX
    RESONANCE_ARROW
    REVERSIBLE_ARROW
    SINGLE_REPLACEMENT
    SOLID
    STRING
    TEMPERATURE
    TIME
    WITH
    YIELD

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement SEMICOLON statement_list
Rule 3     statement_list -> statement SEMICOLON
Rule 4     statement -> balance_statement
Rule 5     statement -> predict_statement
Rule 6     statement -> analyze_statement
Rule 7     balance_statement -> BALANCE reaction_expr
Rule 8     predict_statement -> PREDICT reactants_expr
Rule 9     analyze_statement -> ANALYZE molecule
Rule 10    analyze_statement -> ANALYZE molecule FOR IDENTIFIER
Rule 11    reaction_expr -> reactants_expr ARROW products_expr
Rule 12    reactants_expr -> chemical_term_list
Rule 13    products_expr -> chemical_term_list
Rule 14    chemical_term_list -> chemical_term PLUS chemical_term_list
Rule 15    chemical_term_list -> chemical_term
Rule 16    chemical_term -> INTEGER molecule
Rule 17    chemical_term -> molecule
Rule 18    molecule -> molecule_part molecule
Rule 19    molecule -> molecule_part
Rule 20    molecule_part -> element_group
Rule 21    molecule_part -> LPAREN molecule RPAREN INTEGER
Rule 22    element_group -> ELEMENT_SYMBOL INTEGER
Rule 23    element_group -> ELEMENT_SYMBOL

Terminals, with rules where they appear

ACID_BASE            : 
ALGEBRAIC            : 
ANALYZE              : 9 10
AQUEOUS              : 
ARROW                : 11
ASSIGN               : 
BALANCE              : 7
CARET                : 
CATALYST             : 
COMBUSTION           : 
COMMA                : 
COMPOUND             : 
DECOMPOSITION        : 
DOUBLE_REPLACEMENT   : 
ELEMENT              : 
ELEMENT_SYMBOL       : 22 23
EMPIRICAL_FORMULA    : 
ENTHALPY             : 
ENTROPY              : 
EQUALS               : 
EQUILIBRIUM          : 
FLOAT                : 
FOR                  : 10
GAS                  : 
GAS_FORMATION        : 
GIBBS_ENERGY         : 
HALF_REACTION        : 
HEAT                 : 
IDENTIFIER           : 10
INTEGER              : 16 21 22
LBRACE               : 
LBRACKET             : 
LIMITING_REAGENT     : 
LIQUID               : 
LPAREN               : 21
MOLARITY             : 
MOLAR_MASS           : 
MOLECULAR_FORMULA    : 
NEGATIVE             : 
NORMALITY            : 
OF                   : 
OXIDATION_NUMBER     : 
OXIDATION_STATES     : 
PERCENT_YIELD        : 
PH                   : 
PLUS                 : 14
POSITIVE             : 
PRECIPITATION        : 
PREDICT              : 8
PRESSURE             : 
QUERY                : 
RBRACE               : 
RBRACKET             : 
REACTION             : 
REDOX                : 
RESONANCE_ARROW      : 
REVERSIBLE_ARROW     : 
RPAREN               : 21
SEMICOLON            : 2 3
SINGLE_REPLACEMENT   : 
SOLID                : 
STRING               : 
TEMPERATURE          : 
TIME                 : 
WITH                 : 
YIELD                : 
error                : 

Nonterminals, with rules where they appear

analyze_statement    : 6
balance_statement    : 4
chemical_term        : 14 15
chemical_term_list   : 12 13 14
element_group        : 20
molecule             : 9 10 16 17 18 21
molecule_part        : 18 19
predict_statement    : 5
products_expr        : 11
program              : 0
reactants_expr       : 8 11
reaction_expr        : 7
statement            : 2 3
statement_list       : 1 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement SEMICOLON statement_list
    (3) statement_list -> . statement SEMICOLON
    (4) statement -> . balance_statement
    (5) statement -> . predict_statement
    (6) statement -> . analyze_statement
    (7) balance_statement -> . BALANCE reaction_expr
    (8) predict_statement -> . PREDICT reactants_expr
    (9) analyze_statement -> . ANALYZE molecule
    (10) analyze_statement -> . ANALYZE molecule FOR IDENTIFIER

    BALANCE         shift and go to state 7
    PREDICT         shift and go to state 8
    ANALYZE         shift and go to state 9

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    balance_statement              shift and go to state 4
    predict_statement              shift and go to state 5
    analyze_statement              shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement . SEMICOLON statement_list
    (3) statement_list -> statement . SEMICOLON

    SEMICOLON       shift and go to state 10


state 4

    (4) statement -> balance_statement .

    SEMICOLON       reduce using rule 4 (statement -> balance_statement .)


state 5

    (5) statement -> predict_statement .

    SEMICOLON       reduce using rule 5 (statement -> predict_statement .)


state 6

    (6) statement -> analyze_statement .

    SEMICOLON       reduce using rule 6 (statement -> analyze_statement .)


state 7

    (7) balance_statement -> BALANCE . reaction_expr
    (11) reaction_expr -> . reactants_expr ARROW products_expr
    (12) reactants_expr -> . chemical_term_list
    (14) chemical_term_list -> . chemical_term PLUS chemical_term_list
    (15) chemical_term_list -> . chemical_term
    (16) chemical_term -> . INTEGER molecule
    (17) chemical_term -> . molecule
    (18) molecule -> . molecule_part molecule
    (19) molecule -> . molecule_part
    (20) molecule_part -> . element_group
    (21) molecule_part -> . LPAREN molecule RPAREN INTEGER
    (22) element_group -> . ELEMENT_SYMBOL INTEGER
    (23) element_group -> . ELEMENT_SYMBOL

    INTEGER         shift and go to state 15
    LPAREN          shift and go to state 19
    ELEMENT_SYMBOL  shift and go to state 20

    reaction_expr                  shift and go to state 11
    reactants_expr                 shift and go to state 12
    chemical_term_list             shift and go to state 13
    chemical_term                  shift and go to state 14
    molecule                       shift and go to state 16
    molecule_part                  shift and go to state 17
    element_group                  shift and go to state 18

state 8

    (8) predict_statement -> PREDICT . reactants_expr
    (12) reactants_expr -> . chemical_term_list
    (14) chemical_term_list -> . chemical_term PLUS chemical_term_list
    (15) chemical_term_list -> . chemical_term
    (16) chemical_term -> . INTEGER molecule
    (17) chemical_term -> . molecule
    (18) molecule -> . molecule_part molecule
    (19) molecule -> . molecule_part
    (20) molecule_part -> . element_group
    (21) molecule_part -> . LPAREN molecule RPAREN INTEGER
    (22) element_group -> . ELEMENT_SYMBOL INTEGER
    (23) element_group -> . ELEMENT_SYMBOL

    INTEGER         shift and go to state 15
    LPAREN          shift and go to state 19
    ELEMENT_SYMBOL  shift and go to state 20

    reactants_expr                 shift and go to state 21
    chemical_term_list             shift and go to state 13
    chemical_term                  shift and go to state 14
    molecule                       shift and go to state 16
    molecule_part                  shift and go to state 17
    element_group                  shift and go to state 18

state 9

    (9) analyze_statement -> ANALYZE . molecule
    (10) analyze_statement -> ANALYZE . molecule FOR IDENTIFIER
    (18) molecule -> . molecule_part molecule
    (19) molecule -> . molecule_part
    (20) molecule_part -> . element_group
    (21) molecule_part -> . LPAREN molecule RPAREN INTEGER
    (22) element_group -> . ELEMENT_SYMBOL INTEGER
    (23) element_group -> . ELEMENT_SYMBOL

    LPAREN          shift and go to state 19
    ELEMENT_SYMBOL  shift and go to state 20

    molecule                       shift and go to state 22
    molecule_part                  shift and go to state 17
    element_group                  shift and go to state 18

state 10

    (2) statement_list -> statement SEMICOLON . statement_list
    (3) statement_list -> statement SEMICOLON .
    (2) statement_list -> . statement SEMICOLON statement_list
    (3) statement_list -> . statement SEMICOLON
    (4) statement -> . balance_statement
    (5) statement -> . predict_statement
    (6) statement -> . analyze_statement
    (7) balance_statement -> . BALANCE reaction_expr
    (8) predict_statement -> . PREDICT reactants_expr
    (9) analyze_statement -> . ANALYZE molecule
    (10) analyze_statement -> . ANALYZE molecule FOR IDENTIFIER

    $end            reduce using rule 3 (statement_list -> statement SEMICOLON .)
    BALANCE         shift and go to state 7
    PREDICT         shift and go to state 8
    ANALYZE         shift and go to state 9

    statement                      shift and go to state 3
    statement_list                 shift and go to state 23
    balance_statement              shift and go to state 4
    predict_statement              shift and go to state 5
    analyze_statement              shift and go to state 6

state 11

    (7) balance_statement -> BALANCE reaction_expr .

    SEMICOLON       reduce using rule 7 (balance_statement -> BALANCE reaction_expr .)


state 12

    (11) reaction_expr -> reactants_expr . ARROW products_expr

    ARROW           shift and go to state 24


state 13

    (12) reactants_expr -> chemical_term_list .

    ARROW           reduce using rule 12 (reactants_expr -> chemical_term_list .)
    SEMICOLON       reduce using rule 12 (reactants_expr -> chemical_term_list .)


state 14

    (14) chemical_term_list -> chemical_term . PLUS chemical_term_list
    (15) chemical_term_list -> chemical_term .

    PLUS            shift and go to state 25
    ARROW           reduce using rule 15 (chemical_term_list -> chemical_term .)
    SEMICOLON       reduce using rule 15 (chemical_term_list -> chemical_term .)


state 15

    (16) chemical_term -> INTEGER . molecule
    (18) molecule -> . molecule_part molecule
    (19) molecule -> . molecule_part
    (20) molecule_part -> . element_group
    (21) molecule_part -> . LPAREN molecule RPAREN INTEGER
    (22) element_group -> . ELEMENT_SYMBOL INTEGER
    (23) element_group -> . ELEMENT_SYMBOL

    LPAREN          shift and go to state 19
    ELEMENT_SYMBOL  shift and go to state 20

    molecule                       shift and go to state 26
    molecule_part                  shift and go to state 17
    element_group                  shift and go to state 18

state 16

    (17) chemical_term -> molecule .

    PLUS            reduce using rule 17 (chemical_term -> molecule .)
    ARROW           reduce using rule 17 (chemical_term -> molecule .)
    SEMICOLON       reduce using rule 17 (chemical_term -> molecule .)


state 17

    (18) molecule -> molecule_part . molecule
    (19) molecule -> molecule_part .
    (18) molecule -> . molecule_part molecule
    (19) molecule -> . molecule_part
    (20) molecule_part -> . element_group
    (21) molecule_part -> . LPAREN molecule RPAREN INTEGER
    (22) element_group -> . ELEMENT_SYMBOL INTEGER
    (23) element_group -> . ELEMENT_SYMBOL

    PLUS            reduce using rule 19 (molecule -> molecule_part .)
    ARROW           reduce using rule 19 (molecule -> molecule_part .)
    SEMICOLON       reduce using rule 19 (molecule -> molecule_part .)
    FOR             reduce using rule 19 (molecule -> molecule_part .)
    RPAREN          reduce using rule 19 (molecule -> molecule_part .)
    LPAREN          shift and go to state 19
    ELEMENT_SYMBOL  shift and go to state 20

    molecule_part                  shift and go to state 17
    molecule                       shift and go to state 27
    element_group                  shift and go to state 18

state 18

    (20) molecule_part -> element_group .

    LPAREN          reduce using rule 20 (molecule_part -> element_group .)
    ELEMENT_SYMBOL  reduce using rule 20 (molecule_part -> element_group .)
    PLUS            reduce using rule 20 (molecule_part -> element_group .)
    ARROW           reduce using rule 20 (molecule_part -> element_group .)
    SEMICOLON       reduce using rule 20 (molecule_part -> element_group .)
    FOR             reduce using rule 20 (molecule_part -> element_group .)
    RPAREN          reduce using rule 20 (molecule_part -> element_group .)


state 19

    (21) molecule_part -> LPAREN . molecule RPAREN INTEGER
    (18) molecule -> . molecule_part molecule
    (19) molecule -> . molecule_part
    (20) molecule_part -> . element_group
    (21) molecule_part -> . LPAREN molecule RPAREN INTEGER
    (22) element_group -> . ELEMENT_SYMBOL INTEGER
    (23) element_group -> . ELEMENT_SYMBOL

    LPAREN          shift and go to state 19
    ELEMENT_SYMBOL  shift and go to state 20

    molecule                       shift and go to state 28
    molecule_part                  shift and go to state 17
    element_group                  shift and go to state 18

state 20

    (22) element_group -> ELEMENT_SYMBOL . INTEGER
    (23) element_group -> ELEMENT_SYMBOL .

    INTEGER         shift and go to state 29
    LPAREN          reduce using rule 23 (element_group -> ELEMENT_SYMBOL .)
    ELEMENT_SYMBOL  reduce using rule 23 (element_group -> ELEMENT_SYMBOL .)
    PLUS            reduce using rule 23 (element_group -> ELEMENT_SYMBOL .)
    ARROW           reduce using rule 23 (element_group -> ELEMENT_SYMBOL .)
    SEMICOLON       reduce using rule 23 (element_group -> ELEMENT_SYMBOL .)
    FOR             reduce using rule 23 (element_group -> ELEMENT_SYMBOL .)
    RPAREN          reduce using rule 23 (element_group -> ELEMENT_SYMBOL .)


state 21

    (8) predict_statement -> PREDICT reactants_expr .

    SEMICOLON       reduce using rule 8 (predict_statement -> PREDICT reactants_expr .)


state 22

    (9) analyze_statement -> ANALYZE molecule .
    (10) analyze_statement -> ANALYZE molecule . FOR IDENTIFIER

    SEMICOLON       reduce using rule 9 (analyze_statement -> ANALYZE molecule .)
    FOR             shift and go to state 30


state 23

    (2) statement_list -> statement SEMICOLON statement_list .

    $end            reduce using rule 2 (statement_list -> statement SEMICOLON statement_list .)


state 24

    (11) reaction_expr -> reactants_expr ARROW . products_expr
    (13) products_expr -> . chemical_term_list
    (14) chemical_term_list -> . chemical_term PLUS chemical_term_list
    (15) chemical_term_list -> . chemical_term
    (16) chemical_term -> . INTEGER molecule
    (17) chemical_term -> . molecule
    (18) molecule -> . molecule_part molecule
    (19) molecule -> . molecule_part
    (20) molecule_part -> . element_group
    (21) molecule_part -> . LPAREN molecule RPAREN INTEGER
    (22) element_group -> . ELEMENT_SYMBOL INTEGER
    (23) element_group -> . ELEMENT_SYMBOL

    INTEGER         shift and go to state 15
    LPAREN          shift and go to state 19
    ELEMENT_SYMBOL  shift and go to state 20

    products_expr                  shift and go to state 31
    chemical_term_list             shift and go to state 32
    chemical_term                  shift and go to state 14
    molecule                       shift and go to state 16
    molecule_part                  shift and go to state 17
    element_group                  shift and go to state 18

state 25

    (14) chemical_term_list -> chemical_term PLUS . chemical_term_list
    (14) chemical_term_list -> . chemical_term PLUS chemical_term_list
    (15) chemical_term_list -> . chemical_term
    (16) chemical_term -> . INTEGER molecule
    (17) chemical_term -> . molecule
    (18) molecule -> . molecule_part molecule
    (19) molecule -> . molecule_part
    (20) molecule_part -> . element_group
    (21) molecule_part -> . LPAREN molecule RPAREN INTEGER
    (22) element_group -> . ELEMENT_SYMBOL INTEGER
    (23) element_group -> . ELEMENT_SYMBOL

    INTEGER         shift and go to state 15
    LPAREN          shift and go to state 19
    ELEMENT_SYMBOL  shift and go to state 20

    chemical_term                  shift and go to state 14
    chemical_term_list             shift and go to state 33
    molecule                       shift and go to state 16
    molecule_part                  shift and go to state 17
    element_group                  shift and go to state 18

state 26

    (16) chemical_term -> INTEGER molecule .

    PLUS            reduce using rule 16 (chemical_term -> INTEGER molecule .)
    ARROW           reduce using rule 16 (chemical_term -> INTEGER molecule .)
    SEMICOLON       reduce using rule 16 (chemical_term -> INTEGER molecule .)


state 27

    (18) molecule -> molecule_part molecule .

    PLUS            reduce using rule 18 (molecule -> molecule_part molecule .)
    ARROW           reduce using rule 18 (molecule -> molecule_part molecule .)
    SEMICOLON       reduce using rule 18 (molecule -> molecule_part molecule .)
    FOR             reduce using rule 18 (molecule -> molecule_part molecule .)
    RPAREN          reduce using rule 18 (molecule -> molecule_part molecule .)


state 28

    (21) molecule_part -> LPAREN molecule . RPAREN INTEGER

    RPAREN          shift and go to state 34


state 29

    (22) element_group -> ELEMENT_SYMBOL INTEGER .

    LPAREN          reduce using rule 22 (element_group -> ELEMENT_SYMBOL INTEGER .)
    ELEMENT_SYMBOL  reduce using rule 22 (element_group -> ELEMENT_SYMBOL INTEGER .)
    PLUS            reduce using rule 22 (element_group -> ELEMENT_SYMBOL INTEGER .)
    ARROW           reduce using rule 22 (element_group -> ELEMENT_SYMBOL INTEGER .)
    SEMICOLON       reduce using rule 22 (element_group -> ELEMENT_SYMBOL INTEGER .)
    FOR             reduce using rule 22 (element_group -> ELEMENT_SYMBOL INTEGER .)
    RPAREN          reduce using rule 22 (element_group -> ELEMENT_SYMBOL INTEGER .)


state 30

    (10) analyze_statement -> ANALYZE molecule FOR . IDENTIFIER

    IDENTIFIER      shift and go to state 35


state 31

    (11) reaction_expr -> reactants_expr ARROW products_expr .

    SEMICOLON       reduce using rule 11 (reaction_expr -> reactants_expr ARROW products_expr .)


state 32

    (13) products_expr -> chemical_term_list .

    SEMICOLON       reduce using rule 13 (products_expr -> chemical_term_list .)


state 33

    (14) chemical_term_list -> chemical_term PLUS chemical_term_list .

    ARROW           reduce using rule 14 (chemical_term_list -> chemical_term PLUS chemical_term_list .)
    SEMICOLON       reduce using rule 14 (chemical_term_list -> chemical_term PLUS chemical_term_list .)


state 34

    (21) molecule_part -> LPAREN molecule RPAREN . INTEGER

    INTEGER         shift and go to state 36


state 35

    (10) analyze_statement -> ANALYZE molecule FOR IDENTIFIER .

    SEMICOLON       reduce using rule 10 (analyze_statement -> ANALYZE molecule FOR IDENTIFIER .)


state 36

    (21) molecule_part -> LPAREN molecule RPAREN INTEGER .

    LPAREN          reduce using rule 21 (molecule_part -> LPAREN molecule RPAREN INTEGER .)
    ELEMENT_SYMBOL  reduce using rule 21 (molecule_part -> LPAREN molecule RPAREN INTEGER .)
    PLUS            reduce using rule 21 (molecule_part -> LPAREN molecule RPAREN INTEGER .)
    ARROW           reduce using rule 21 (molecule_part -> LPAREN molecule RPAREN INTEGER .)
    SEMICOLON       reduce using rule 21 (molecule_part -> LPAREN molecule RPAREN INTEGER .)
    FOR             reduce using rule 21 (molecule_part -> LPAREN molecule RPAREN INTEGER .)
    RPAREN          reduce using rule 21 (molecule_part -> LPAREN molecule RPAREN INTEGER .)

